@@ -39,6 +39,7 @@ V.Next
 - [MINOR] Move Account Manager User Data look-up constants from common, AADAuthenticator to common4j (#1486)
 - [MAJOR] Removes support for SHA-384/512, MD5 w. RSA due to incompatibilities on certain devices (#1489)
 - [MINOR] Implements a fix for sovereign cloud TSL scenarios (#1501)
+- [MINOR] Add a method to allow for the setting of Fragment initial state (#1506)
 
 Version 3.5.0
 ----------
